Fix bug #15228